Update to prevent text spilling out of menus edged towards the side of the screen

--- a/nwjs-menu-browser.css
+++ b/nwjs-menu-browser.css
@@ -76,6 +76,8 @@ html, body {
     align-self: center;
     vertical-align: middle;
     display: inline-flex;
+    justify-content: flex-start;
+    flex-shrink: 0;
 }
 
 .menu-item.normal .icon {
